--- a/index.html
+++ b/index.html
@@ -4,59 +4,96 @@
   <meta charset="UTF-8">
   <title>Missing Marcell ❤️</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style type="text/css" media="screen">
-    body{
-      font-family: 'Roboto', sans-serif;
-      background: lime;
-    }
-    .container {text-align: center;}
-    #logo { border-radius: 50%; }
-    #countdown { font-size: 2em; margin-bottom: 1em;}
+  * { box-sizing: border-box; margin: 0; padding: 0; }
+  html, body { height: 100%; margin: 0; }
+  body {
+    align-items: center;
+    display: flex;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    background: fuchsia;
+  }
+  .container {
+    color: #111;
+    margin: 0 auto;
+    text-align: center;
+    height:100%;
+    display: flex;
+    flex-direction: column;
+  }
+  h1 { font-weight: normal; letter-spacing: .125rem; }
+  li {
+    display: inline-block;
+    font-size: 1.5em;
+    list-style-type: none;
+    padding: 1em;
+    text-transform: uppercase;
+  }
+  li span { display: block; font-size: 4.5rem; }
+  .gone { display: none; padding: 1rem; }
+  #logo {
+    border-radius: 50%;
+    width: 200px;
+    padding: 1em;
+    margin: 0 auto;
+  }
   </style>
 </head>
 <body>
   <div class="container">
     <img src="./assets/praying_marcell.png" alt="Praying Marcell" id="logo"/>
-    <h1>Missing Marcell</h1>
-    <div id="countdown"></div>
-    <img src="./assets/cat.gif" alt="Djing Cat"/>
-  </div>
-  <script charset="utf-8" type="text/javascript">
-    CountDownTimer('06/18/2021 6:00 AM', 'countdown');
 
-    function CountDownTimer(dt, id)
-    {
-        var end = new Date(dt);
+    <h1 id="headline">Marcell is nice<br/>We're gonna miss Marcell</h1>
 
-        var _second = 1000;
-        var _minute = _second * 60;
-        var _hour = _minute * 60;
-        var _day = _hour * 24;
-        var timer;
+    <div id="countdown">
+      <ul>
+        <li><span id="days"></span>days</li>
+        <li><span id="hours"></span>Hours</li>
+        <li><span id="minutes"></span>Minutes</li>
+        <li><span id="seconds"></span>Seconds</li>
+      </ul>
+    </div>
+    <div id="content" class="gone">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
-        function showRemaining() {
-            var now = new Date();
-            var distance = end - now;
+    <img src="./assets/travolta.gif" alt="Travolta" id="come_on_over_to_bcn"/>
 
-            if (distance < 0) {
-                clearInterval(timer);
-                document.getElementById(id).innerHTML = 'HE\'S GONE :(';
-                return;
-            }
+    </div> <!-- container -->
 
-            var days = Math.floor(distance / _day);
-            var hours = Math.floor((distance % _day) / _hour);
-            var minutes = Math.floor((distance % _hour) / _minute);
-            var seconds = Math.floor((distance % _minute) / _second);
 
-            document.getElementById(id).innerHTML = days + 'days ';
-            document.getElementById(id).innerHTML += hours + 'hrs ';
-            document.getElementById(id).innerHTML += minutes + 'mins ';
-            document.getElementById(id).innerHTML += seconds + 'secs';
+    <script charset="utf-8" type="text/javascript">
+    (function () {
+      const second = 1000,
+            minute = second * 60,
+            hour = minute * 60,
+            day = hour * 24;
+
+      let bye_marcell = "Jun 18, 2021 18:00:00",
+      countDown = new Date(bye_marcell).getTime(),
+      x = setInterval(function() {
+        let now = new Date().getTime(),
+        distance = countDown - now;
+
+        document.getElementById("days").innerText = Math.floor(distance / (day)),
+        document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
+        document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
+        document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
+
+        //do something when marcell leaves
+        if (distance < 0) {
+          let headline = document.getElementById("headline"),
+              countdown = document.getElementById("countdown"),
+              content = document.getElementById("content");
+
+          headline.innerText = "You'll be missed!";
+          countdown.style.display = "none";
+          content.style.display = "block";
+
+          clearInterval(x);
         }
-        timer = setInterval(showRemaining, 1000);
-    }
+      }, 0)
+    }());
   </script>
 </body>
 </html>
